scss/_variables.scss
$colors: (
  white: #FFF,
  black: #000,
  light-gray: #EEE,
  mid-gray: #DDD,
  muted-gray: #838C8D,
  blue: #014983,
  orange: #F2A42C,
  purple: #9650BF,
  mint-green: #58F5A7,
  light-red: #F2726D,
  dark-green: #24A552,
  dark-red: #A52D28,
  dark-yellow: #FFBB00,
  light-teal: #46DBD3,
  dark-aquamarine: #35A593,
  light-aquamarine: #13CAAD,
  light-purple: #BF87BF,
  light-yellow: #FFE68E,
  burgundy: #83262E
);

$configuration-item-height: 20px;
$configuration-item-height-big: 40px;

